Project

General

Profile

Actions

Bug #43649

closed

mount.ceph fails with ERANGE if name= option is longer than 37 characters

Added by Jeff Layton over 4 years ago. Updated about 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Community (user)
Tags:
Backport:
nautilus
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
kceph
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Aaron reported on the cephfs mailing list that some mount attempts were failing with ERANGE. For example:

# mount.ceph :/ /mnt/cephfs -o name=user-20c5338c-34db-11ea-b27a-de7033e90,secret=AQC6dhpeyczkDxAAhRcr7oERUY4BcD2NCUkuNg==

Trimming the name down to 37 characters allows it to work. The problem is the SECRET_OPTIONS_LEN constant is too small for long usernames.


Related issues 1 (0 open1 closed)

Copied to CephFS - Backport #43770: nautilus: mount.ceph fails with ERANGE if name= option is longer than 37 charactersResolvedNathan CutlerActions
Actions #1

Updated by Jeff Layton over 4 years ago

  • Severity changed from 3 - minor to 2 - major
Actions #2

Updated by Jeff Layton over 4 years ago

  • Pull request ID set to 32706
Actions #3

Updated by Jeff Layton over 4 years ago

  • Status changed from New to In Progress
Actions #4

Updated by Jeff Layton over 4 years ago

It turns out that name= options can pretty much be arbitrarily long, so I reworked the code to remove the need for an artificial limit there. It should do the right thing for any name= option. Note that the mount() syscall has a 1 page limit for options so if you try to give it too long a name it's going to fail anyway.

Actions #5

Updated by Ilya Dryomov over 4 years ago

  • Backport set to mimic,nautilus
Actions #6

Updated by Ilya Dryomov over 4 years ago

  • Backport changed from mimic,nautilus to nautilus
Actions #7

Updated by Patrick Donnelly over 4 years ago

  • Status changed from In Progress to Pending Backport
  • Target version set to v15.0.0
  • Source set to Community (user)
  • Component(FS) kceph added
Actions #8

Updated by Nathan Cutler about 4 years ago

  • Copied to Backport #43770: nautilus: mount.ceph fails with ERANGE if name= option is longer than 37 characters added
Actions #9

Updated by Nathan Cutler about 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF